* Add 'starts with' and 'ends with' on char search
* Handle domain with '=' or '!=' as operator on selection
* Extend fields domain with local domains
* Improve float time widget to handle year, month, week and day
  and handle float_time attribute for contextual time convertion

Version 1.2.0 - 2009-04-20
* Bug fixes (see mercurial logs for details)
* Make graph works also with datetime
* Add edition on Many2Many
* Fix open in csv export to use file actions
* Update client labels at language change
* Handle datetime_field in Many2One
* Set readonly on records with _datetime in the context
* Display values of reference fields even if there is no model
* Allow to directly print or create email with reports
* Handle invisible states on list view
* Add user warnings
* Add Model in logs
* Allow to duplicate many records at once
* Improve netrpc communication speed
* Improve date widget to display mask only when having focus
* Fix for host with IPv6 enable but without default IPv6 route
* Add desktop entry
* Add win32 single executable
* Allow egg installation

Version 1.0.0 - 2008-11-17
* Initial release