@@ -66,17 +66,19 @@ class ConfigManager(object):
             'login.server': 'localhost',
             'login.port': '8070',
             'login.db': False,
-            'client.modepda': False,
-            'client.toolbar': 'default',
             'tip.autostart': False,
             'tip.position': 0,
             'logging.logger': '',
             'logging.level': 'ERROR',
-            'client.default_path': get_home_dir(),
             'form.toolbar': True,
+            'client.default_width': 900,
+            'client.default_height': 750,
+            'client.modepda': False,
+            'client.toolbar': 'default',
             'client.form_tab': 'left',
             'client.tree_width': True,
             'client.spellcheck': False,
+            'client.default_path': get_home_dir(),
             'client.lang': locale.getdefaultlocale()[0],
             'client.language_direction': 'ltr',
             'client.actions': {
